# tracking-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: schema.sql
mcp_server/: __init__.py
