[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "tracking-mcp"
version = "0.1.0"
description = "MCP server for generic entity tracking with JSON Hybrid storage"
authors = [
    {name = "Mario Mosca"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.7.1",
    "aiosqlite>=0.19.0",
    "python-dateutil>=2.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
tracking-mcp = "tracking_mcp.server:main"

[tool.setuptools]
packages = ["tracking_mcp"]
package-dir = {"" = "mcp_server"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
